Simplify testing by sticking to assertEquals/True/False